# terminus-mind

./: .gitignore  CURATION.md  DESIGN.md  README.md  ROADMAP.md  TRIAGE.md  pyproject.toml
docs/: hermes-plugin-assessment.md
journal/: TRIAGE-REPORT.md  hermes.jsonl  sleep.jsonl
journal/archive/: 20260612-hermes.jsonl
ops/: tm-backup.service  tm-backup.timer  tm-embed.service  tm-sleep.service  tm-sleep.timer
plugins/hermes/terminus_mind_provider/: README.md  __init__.py  plugin.yaml
prompts/: memory.md
scripts/: graph-viewer.html  import_episodes.py  install-hermes-plugin.sh
src/terminus_mind/: __init__.py  cli.py  client.py  embeddings.py  journal.py  llm.py  mcp_server.py  mind.py  schema.py  scoring.py  sleep.py  tools.py
tests/: conftest.py  test_embeddings.py  test_hermes_plugin.py  test_journal.py  test_mcp.py  test_mind.py  test_sleep.py
